ex3/testdata/typechecker/error/AssignToInt.java
class Wuff {
    public static void main(String[] args) {
        int[] i;
        i = new int[5];
        int j;
        j = i;
    }
}